[tool.poetry]
name = "pyworxcloud"
version = "3.0.2"
description = "Landroid cloud (Positec) API library"
authors = ["Malene Trab <malene@trab.dk>"]
documentation = "https://github.com/mtrab/pyworxcloud"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]

license = "MIT"
readme = "README.md"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/mtrab/pyworxcloud/issues"

[tool.poetry.dependencies]
python = "^3.10"
awsiot = "0.1.3"
urllib3 = "^1.26.10"
requests = "^2.26.0"
