[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pyworxcloud"
version = "3.0.3"
description = "Landroid cloud (Positec) API library"
authors = ["Malene Trab <malene@trab.dk>"]
documentation = "https://github.com/mtrab/pyworxcloud"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]

license = "MIT"
readme = "README.md"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/mtrab/pyworxcloud/issues"

[tool.poetry.dependencies]
python = "^3.9"
urllib3 = "^1.26.5"
requests = "^2.28.0"
paho-mqtt = "^1.6.1"
